# feed-reader

./: .gitignore  .travis.yml  LICENSE  README.md  feed-reader-core.cabal  stack.yaml
src/: Main.hs
src/FeedReader/: BlockDB.hs  Cache.hs  Console.hs  Convert.hs  DB.hs  DB_info.md  DocDB.hs  Example.hs  Import.hs  Queries.hs  Types.hs  Utils.hs  XML2DB.hs
src/FeedReader/Data/: DB.hs
