name:                feed-reader-core
category:            Data, Network
version:             0.1.0.0
license:             BSD3
cabal-version:       >=1.10
license-file:        LICENSE
author:              Călin Ardelean
maintainer:          Călin Ardelean <calinucs@gmail.com>
stability:           experimental
homepage:            https://github.com/clnx/feed-reader
bug-reports:         https://github.com/clnx/feed-reader/issues
copyright:           Copyright (C) 2015 Călin Ardelean
synopsis:            RSS/Atom feed reader server
description:
  RSS/Atom feed reader server
build-type:          Simple

library
  build-depends:
    base,
    time,
    containers,
    mtl,
    bytestring,
    cereal,
    filepath,
    directory,
    hashable,
    psqueues,
    xml,
    feed,
    pipes,
    pipes-http,
    http-types

  exposed-modules:
    FeedReader.Types,
    FeedReader.Cache,
    FeedReader.DocDB,
    FeedReader.DB,
    FeedReader.Convert,
    FeedReader.Import,
    FeedReader.Utils

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010

executable feeds-console
  main-is: FeedReader/Console.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
    base,
    time,
    hashable,
    random,
    containers,
    mtl,
    filepath,
    directory,
    pipes,
    pipes-safe,
    pipes-http,
    http-types,
    bytestring,
    cereal,
    psqueues,
    xml,
    feed
