name:                feed-reader-core
category:            Data, Network
version:             0.1.0.0
synopsis:            RSS/Atom feed reader server
description:
  RSS/Atom feed reader server
homepage:            https://github.com/mmn80/feed-reader
bug-reports:         https://github.com/mmn80/feed-reader/issues
author:              Călin Ardelean
maintainer:          Călin Ardelean <mmn80cpu@gmail.com>
copyright:           Copyright (c) 2015-16 Călin Ardelean
license:             BSD3
license-file:        LICENSE
stability:           experimental
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/mmn80/feed-reader.git

library
  ghc-options:       -Wall
  build-depends:
    base             >= 4.8 && < 5,
    time,
    mtl,
    containers,
    bytestring,
    hashable,
    cereal,
    text,
    xml,
    feed,
    opml,
    filepath,
    directory,
    pipes,
    pipes-http,
    http-types,
    muesli
  exposed-modules:
    FeedReader.Types,
    FeedReader.DB,
    FeedReader.Convert,
    FeedReader.Import,
    FeedReader.Utils
  hs-source-dirs:    src
  default-language:  Haskell2010

executable feeds-console
  main-is: FeedReader/Console.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:
    base             >= 4.8 && < 5,
    time,
    mtl,
    containers,
    bytestring,
    hashable,
    cereal,
    text,
    xml,
    feed,
    opml,
    random,
    filepath,
    directory,
    pipes,
    pipes-safe,
    pipes-http,
    http-types,
    muesli
